Introduce import-pe tests

--- a/share/revng/test/configuration/revng-qa/architectures.yml
+++ b/share/revng/test/configuration/revng-qa/architectures.yml
@@ -1,8 +1,10 @@
 tags:
+  - name: linux
   - name: compiler
     variables:
       CFLAGS:
       - -no-pie
+    implies: [linux]
   - name: native
     implies: [compiler]
   - name: dynamic
