--- a/share/revng/test/configuration/revng-qa/compile.yml
+++ b/share/revng/test/configuration/revng-qa/compile.yml
@@ -2,6 +2,7 @@ commands:
   - type: revng-qa.compiled
     from:
     - type: source
+      filter: linux
     command: ${TRIPLE}gcc $INPUT -o $OUTPUT $CFLAGS
   - type: revng-qa.disassembled
     from:
