--- a/share/revng/test/configuration/revng-qa/for-segregate-stack-accesses.yml
+++ b/share/revng/test/configuration/revng-qa/for-segregate-stack-accesses.yml
@@ -7,6 +7,6 @@ tags:
         - -O1
         - -fno-stack-protector
 sources:
-  - tags: [dynamic, native, for-segregate-stack-accesses]
+  - tags: [native, dynamic, for-segregate-stack-accesses]
     members:
     - tests/analysis/SegregateStackAccesses/dynamic_native/segregate.c
