for-analysis: do not set CFLAGS

--- a/share/revng/test/configuration/revng-qa/architectures.yml
+++ b/share/revng/test/configuration/revng-qa/architectures.yml
@@ -13,6 +13,10 @@ tags:
     variables:
       CFLAGS:
         - -static
+  - name: nostdlib
+    variables:
+      CFLAGS:
+        - -nostdlib
   - name: cross-compiler
     implies: [compiler]
   - name: arm
