Import dynamic-call.S

--- a/share/revng/test/configuration/revng-qa/architectures.yml
+++ b/share/revng/test/configuration/revng-qa/architectures.yml
@@ -17,6 +17,10 @@ tags:
     variables:
       CFLAGS:
         - -nostdlib
+  - name: nostartfiles
+    variables:
+      CFLAGS:
+        - -nostartfiles
   - name: cross-compiler
     implies: [compiler]
   - name: arm
