--- a/share/revng/test/configuration/revng-qa/for-collect-cfg.yml
+++ b/share/revng/test/configuration/revng-qa/for-collect-cfg.yml
@@ -17,6 +17,9 @@ tags:
         - -fno-align-functions
         - -fno-optimize-sibling-calls
 sources:
+  - tags: [arm, dynamic, nostartfiles, for-analysis, for-collect-cfg]
+    members:
+    - tests/analysis/CollectCFG/arm/dynamic-call.S
   - tags: [arm, static, nostdlib, for-analysis, for-collect-cfg]
     members:
     - tests/analysis/CollectCFG/arm/switch-addls.S
@@ -29,10 +32,16 @@ sources:
     - tests/analysis/CollectCFG/arm/longjmp.S
     - tests/analysis/CollectCFG/arm/indirect-tail-call.S
     - tests/analysis/CollectCFG/arm/memset.S
+  - tags: [mips, dynamic, nostartfiles, for-analysis, for-collect-cfg]
+    members:
+    - tests/analysis/CollectCFG/mips/dynamic-call.S
   - tags: [mips, static, nostdlib, for-analysis, for-collect-cfg]
     members:
     - tests/analysis/CollectCFG/mips/switch-jump-table.S
     - tests/analysis/CollectCFG/mips/jump-table-base-before-function-call.S
+  - tags: [x86-64, dynamic, nostartfiles, for-analysis, for-collect-cfg]
+    members:
+    - tests/analysis/CollectCFG/x86_64/dynamic-call.S
   - tags: [x86-64, static, nostdlib, for-analysis, for-collect-cfg]
     members:
     - tests/analysis/CollectCFG/x86_64/try-catch-ehframe.S
@@ -46,3 +55,6 @@ sources:
   - tags: [x86-64, static, nostdlib, moderate-opt, for-analysis, for-collect-cfg]
     members:
     - tests/analysis/CollectCFG/x86_64/fibonacci.c
+  - tags: [i386, dynamic, nostartfiles, for-analysis, for-collect-cfg]
+    members:
+    - tests/analysis/CollectCFG/i386/dynamic-call.S
