Run one wine at a time

--- a/share/revng/test/configuration/revng-qa/for-import-pe.yml
+++ b/share/revng/test/configuration/revng-qa/for-import-pe.yml
@@ -26,6 +26,7 @@ commands:
   from:
   - type: source
     filter: windows
+  pool: wine
   command: |-
       x86_64-winsdk-vc16-cl z:\$INPUT /Fe$OUTPUT $CFLAGS /link $LDFLAGS
 - type: revng-qa.generated-pdb
@@ -33,5 +34,6 @@ commands:
   - type: source
     filter: windows
     suffix: .pdb
+  pool: wine
   command: |-
       x86_64-winsdk-vc16-cl z:\$INPUT $CFLAGS /link /pdb:$OUTPUT $LDFLAGS
