--- a/share/revng/test/configuration/revng-qa/for-detect-abi.yml
+++ b/share/revng/test/configuration/revng-qa/for-detect-abi.yml
@@ -20,30 +20,39 @@ tags:
     CFLAGS:
     - -DABIDEF=__stdcall
 sources:
-- tags: [abi-describe-functions]
-  repeat-for:
-  - [x86-64-systemv-abi]
+- tags:
+  - abi-describe-functions
+  - x86-64-systemv-abi
+  - linux
+  - x86-64
+  - static
   members:
   - tests/abi/source/describe_functions.c
-- tags: [abi-functions-library]
-  repeat-for:
-  - [x86-64-systemv-abi]
+- tags:
+  - abi-functions-library
+  - x86-64-systemv-abi
+  - linux
   members:
   - tests/abi/source/abi_test_function_library.c
-sources:
-  - tags: [x86-64, static, nostdlib, for-analysis, for-detect-abi]
-    members:
-    - tests/analysis/DetectABI/x86_64/always-dead-return-value.S
-    - tests/analysis/DetectABI/x86_64/dead-on-one-path.S
-    - tests/analysis/DetectABI/x86_64/dead-register.S
-    - tests/analysis/DetectABI/x86_64/draof.S
-    - tests/analysis/DetectABI/x86_64/drvofc.S
-    - tests/analysis/DetectABI/x86_64/raofc.S
-    # - tests/analysis/DetectABI/x86_64/recursion.S
-    - tests/analysis/DetectABI/x86_64/sometimes-dead-return-value.S
-    - tests/analysis/DetectABI/x86_64/uraof.S
-    - tests/analysis/DetectABI/x86_64/urvofc.S
-    - tests/analysis/DetectABI/x86_64/urvof.S
-    - tests/analysis/DetectABI/x86_64/push-pop.S
-    - tests/analysis/DetectABI/x86_64/indirect-call-callee-saved.S
-    # - tests/analysis/DetectABI/x86_64/return-value-to-argument.S
+- tags:
+  - x86-64
+  - static
+  - nostdlib
+  - for-analysis
+  - for-detect-abi
+  - linux
+  members:
+  - tests/analysis/DetectABI/x86_64/always-dead-return-value.S
+  - tests/analysis/DetectABI/x86_64/dead-on-one-path.S
+  - tests/analysis/DetectABI/x86_64/dead-register.S
+  - tests/analysis/DetectABI/x86_64/draof.S
+  - tests/analysis/DetectABI/x86_64/drvofc.S
+  - tests/analysis/DetectABI/x86_64/raofc.S
+  # - tests/analysis/DetectABI/x86_64/recursion.S
+  - tests/analysis/DetectABI/x86_64/sometimes-dead-return-value.S
+  - tests/analysis/DetectABI/x86_64/uraof.S
+  - tests/analysis/DetectABI/x86_64/urvofc.S
+  - tests/analysis/DetectABI/x86_64/urvof.S
+  - tests/analysis/DetectABI/x86_64/push-pop.S
+  - tests/analysis/DetectABI/x86_64/indirect-call-callee-saved.S
+  # - tests/analysis/DetectABI/x86_64/return-value-to-argument.S
