Introduce empty source file to test

--- a/share/revng/test/configuration/revng-qa/architectures.yml
+++ b/share/revng/test/configuration/revng-qa/architectures.yml
@@ -17,6 +17,11 @@ tags:
     variables:
       CFLAGS:
         - -nostdlib
+  - name: shared
+    variables:
+      CFLAGS:
+        - -shared
+  - name: empty
   - name: nostartfiles
     variables:
       CFLAGS:
