--- a/share/revng/test/configuration/revng-qa/example-executables.yml
+++ b/share/revng/test/configuration/revng-qa/example-executables.yml
@@ -2,9 +2,9 @@ tags:
   - name: example-executable-1
   - name: example-executable-2
 sources:
-  - tags: [for-runtime, x86-64, static, example-executable-1]
+  - tags: [x86-64, static, example-executable-1]
     members:
     - tests/runtime/calc.c
-  - tags: [for-runtime, x86-64, static, example-executable-2]
+  - tags: [x86-64, static, example-executable-2]
     members:
     - tests/runtime/global.c
