--- a/share/revng/test/configuration/revng-qa/for-import-idb.yml
+++ b/share/revng/test/configuration/revng-qa/for-import-idb.yml
@@ -10,14 +10,15 @@ tags:
         - -g
 sources:
   - tags: [native, dynamic, for-ida]
+    prefix: tests/model/import/idb
     members:
-      - tests/model/import/idb/simple.c
-      - tests/model/import/idb/enum-type.c
-      - tests/model/import/idb/nested-struct.c
-      - tests/model/import/idb/qsort.c
-      - tests/model/import/idb/struct-as-field-ptr.c
-      - tests/model/import/idb/struct.c
-      - tests/model/import/idb/typedef-char-to-uint32.c
+      - simple.c
+      - enum-type.c
+      - nested-struct.c
+      - qsort.c
+      - struct-as-field-ptr.c
+      - struct.c
+      - typedef-char-to-uint32.c
 commands:
   - type: revng-qa.idb
     from:
