--- a/share/revng/test/configuration/revng-qa/for-collect-cfg.yml
+++ b/share/revng/test/configuration/revng-qa/for-collect-cfg.yml
@@ -18,43 +18,51 @@ tags:
         - -fno-optimize-sibling-calls
 sources:
   - tags: [arm, dynamic, nostartfiles, for-analysis, for-collect-cfg]
+    prefix: tests/analysis/CollectCFG/arm
     members:
-      - tests/analysis/CollectCFG/arm/dynamic-call.S
+      - dynamic-call.S
   - tags: [arm, static, nostdlib, for-analysis, for-collect-cfg]
+    prefix: tests/analysis/CollectCFG/arm
     members:
-      - tests/analysis/CollectCFG/arm/switch-addls.S
-      - tests/analysis/CollectCFG/arm/switch-ldrls.S
-      - tests/analysis/CollectCFG/arm/switch-disjoint-ranges.S
-      - tests/analysis/CollectCFG/arm/call.S
-      - tests/analysis/CollectCFG/arm/fake-function.S
-      # - tests/analysis/CollectCFG/arm/fake-function-without-push.S
-      - tests/analysis/CollectCFG/arm/indirect-call.S
-      - tests/analysis/CollectCFG/arm/longjmp.S
-      - tests/analysis/CollectCFG/arm/indirect-tail-call.S
-      - tests/analysis/CollectCFG/arm/memset.S
+      - switch-addls.S
+      - switch-ldrls.S
+      - switch-disjoint-ranges.S
+      - call.S
+      - fake-function.S
+      # - fake-function-without-push.S
+      - indirect-call.S
+      - longjmp.S
+      - indirect-tail-call.S
+      - memset.S
   - tags: [mips, dynamic, nostartfiles, for-analysis, for-collect-cfg]
+    prefix: tests/analysis/CollectCFG/mips
     members:
-      - tests/analysis/CollectCFG/mips/dynamic-call.S
+      - dynamic-call.S
   - tags: [mips, static, nostdlib, for-analysis, for-collect-cfg]
+    prefix: tests/analysis/CollectCFG/mips
     members:
-      - tests/analysis/CollectCFG/mips/switch-jump-table.S
-      - tests/analysis/CollectCFG/mips/jump-table-base-before-function-call.S
+      - switch-jump-table.S
+      - jump-table-base-before-function-call.S
   - tags: [x86-64, dynamic, nostartfiles, for-analysis, for-collect-cfg]
+    prefix: tests/analysis/CollectCFG/x86_64
     members:
-      - tests/analysis/CollectCFG/x86_64/dynamic-call.S
+      - dynamic-call.S
   - tags: [x86-64, static, nostdlib, for-analysis, for-collect-cfg]
+    prefix: tests/analysis/CollectCFG/x86_64
     members:
-      - tests/analysis/CollectCFG/x86_64/try-catch-ehframe.S
-      - tests/analysis/CollectCFG/x86_64/switch-jump-table.S
-      - tests/analysis/CollectCFG/x86_64/switch-jump-table-32-bit-comparison.S
-      # - tests/analysis/CollectCFG/x86_64/rda-in-memory.S
-      - tests/analysis/CollectCFG/x86_64/longjmp.S
-      - tests/analysis/CollectCFG/x86_64/indirect-tail-call.S
-      - tests/analysis/CollectCFG/x86_64/indirect-call.S
-      - tests/analysis/CollectCFG/x86_64/call.S
+      - try-catch-ehframe.S
+      - switch-jump-table.S
+      - switch-jump-table-32-bit-comparison.S
+      # - rda-in-memory.S
+      - longjmp.S
+      - indirect-tail-call.S
+      - indirect-call.S
+      - call.S
   - tags: [x86-64, static, nostdlib, moderate-opt, for-analysis, for-collect-cfg]
+    prefix: tests/analysis/CollectCFG/x86_64
     members:
-      - tests/analysis/CollectCFG/x86_64/fibonacci.c
+      - fibonacci.c
   - tags: [i386, dynamic, nostartfiles, for-analysis, for-collect-cfg]
+    prefix: tests/analysis/CollectCFG/i386
     members:
-      - tests/analysis/CollectCFG/i386/dynamic-call.S
+      - dynamic-call.S
