--- a/share/revng/test/configuration/revng-qa/runtime.yml
+++ b/share/revng/test/configuration/revng-qa/runtime.yml
@@ -20,12 +20,13 @@ sources:
       - [s390x, static]
       - [native, dynamic]
       - [i386, static]
+    prefix: tests/runtime
     members:
-      - tests/runtime/function-call.c
-      - tests/runtime/floating-point.c
-      - tests/runtime/syscall.c
-      - tests/runtime/global.c
-      - tests/runtime/printf.c
+      - function-call.c
+      - floating-point.c
+      - syscall.c
+      - global.c
+      - printf.c
   - tags: [for-runtime, for-comparison, one-per-architecture]
     repeat-for:
       - [arm, static]
