ABI: rename `fill` into `load` for registers

--- a/scripts/abi_artifact_generator/config/architectures.yml
+++ b/scripts/abi_artifact_generator/config/architectures.yml
@@ -8,10 +8,10 @@
       call {{ function_name }}
     return_from_function: |
       ret
-    fill_a_register: |
+    load_a_register: |
       mov {{ register }}, qword ptr [{{ location }} + {{ offset }}]
     push_to_stack: |
-      {{ fill_a_register }}
+      {{ load_a_register }}
       push {{ register }}
     restore_stack: |
       add rsp, {{ stack_size }}
@@ -29,10 +29,10 @@
       call {{ function_name }}
     return_from_function: |
       ret
-    fill_a_register: |
+    load_a_register: |
       mov {{ register }}, dword ptr [{{ location }} + {{ offset }}]
     push_to_stack: |
-      {{ fill_a_register }}
+      {{ load_a_register }}
       push {{ register }}
     restore_stack: |
       add esp, {{ stack_size }}
@@ -50,15 +50,15 @@
       bl {{ function_name }}
     return_from_function: |
       ret
-    fill_a_register: |
-      adrp {{ register }}, {{location}}
+    load_a_register: |
+      adrp {{ register }}, {{ location }}
       add {{ register }}, {{ register }}, #:lo12:{{ location }}
       ldr {{ register }}, [{{ register }}, #{{ offset }}]
     push_to_stack: |
-      {{ fill_two_registers }}
+      {{ load_two_registers }}
       stp {{ register }}, {{ second_register }}, [sp, #-16]!
     restore_stack: |
-      add sp, sp,  #{{ stack_size }}
+      add sp, sp, #{{ stack_size }}
     save_return_address: |
       str lr, [sp, #-16]!
     restore_return_address: |
@@ -73,12 +73,12 @@
       bl {{ function_name }}
     return_from_function: |
       bx lr
-    fill_a_register: |
+    load_a_register: |
       movw {{ register }}, #:lower16:{{ location }}
       movt {{ register }}, #:upper16:{{ location }}
       ldr {{ register }}, [{{ register }}, #{{ offset }}]
     push_to_stack: |
-      {{ fill_a_register }}
+      {{ load_a_register }}
       push {{ "{ " + register + " }" }}
     restore_stack: |
       add sp, sp, #{{ stack_size }}
