--- a/share/revng/test/configuration/revng-qa/for-detect-abi.yml
+++ b/share/revng/test/configuration/revng-qa/for-detect-abi.yml
@@ -9,6 +9,7 @@ tags:
         - -fno-pie
         - -fno-stack-protector
         - -O1
+        - -masm=intel
 
   - name: abi-functions-library
     variables:
